# ROSJAUS

./: CMakeLists.txt  JuniorRTE.launch  JuniorRTE_igvc.launch  README.md  ROSJAUS.launch  ROSJAUS_outdoor.launch  Run_ROSJAUS_ROSJAUS.sh  Run_ROSJAUS_ROSJAUS_outdoor.sh  Run_ROSJAUS_Stage_no_cop.sh  Run_ROSJAUS_Stage_no_cop_igvc.sh  Run_ROSJAUS_Stage_script.sh  Run_ROSJAUS_Tabs_script.sh  Run_ROSJAUS_WaypointCOP.sh  Run_ROSJAUS_ourdoor.sh  WaypointCOP.launch  WaypointCOP_igvc.launch  mainpage.dox  manifest.xml  package.xml
Wireshark-dissector/: Wireshark_JAUS_dissector.lua  jaus_stage_example.pcap
include/: JAUS_MESSAGE_ID.h  JAUSmessage.h  JAUSservices.h  JAUSwaypoint.h
src/: ROSJAUS.cpp  WaypointCOP.cpp
src/old/: ROSJAUS_no_setGoal.cpp  ROSJAUS_simple.cpp  receiver.cpp  sender.cpp
